# ProfilerLib

./: .gitignore  CMakeLists.txt  Profiler.sln  README.md
Profiler/: Profiler.vcxproj  Profiler.vcxproj.filters  trace.json
Profiler/src/: example.cpp  trace.h  trace_win.cpp
src/: example.cpp  trace_win.cpp
